--- a/app/assets/stylesheets/_design_tokens.scss
+++ b/app/assets/stylesheets/_design_tokens.scss
@@ -266,4 +266,5 @@ $row-width:         62.5em;  // legacy crossword layout width (from _dimensions.
   --z-nav:      300;
   --z-modal:    400;
   --z-toast:    500;
+  --z-panel:    600;  // edit page slide-up tool panels
 }
